--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Portfolio of Rohith Ram, Software Developer based in Salem, Tamil Nadu. Specializing in Java and Flutter development." />
-    <meta name="keywords" content="Rohith Ram, Software Developer, Java, Flutter, Portfolio" />
+        content="Portfolio of Rohith Ram, Aspiring Full-Stack Developer specializing in HTML, CSS, JavaScript, React, Node.js, and modern web technologies." />
+    <meta name="keywords"
+        content="Rohith Ram, Full-Stack Developer, HTML, CSS, JavaScript, React, Node.js, Portfolio" />
     <meta name="author" content="Rohith Ram" />
     <title>Rohith Ram - Software Developer Portfolio</title>
 </head>
